--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>Redirecting…</title>
+  <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url='laserchess/docs/Auth/login.html'">
+    <title>Redirecting to Laser Chess...</title>
 </head>
 <body>
   <p>If you are not redirected automatically, <a href="laserchess/docs/Auth/login.html">click here</a>.</p>
