--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Redirecting…</title>
   <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url='laserchess/docs/Auth/login.html'">
+    <meta http-equiv="refresh" content="0; url='laserchess.pages.dev/laserchess/docs/Auth/login.html'">
     <title>Redirecting to Laser Chess...</title>
 </head>
 <body>
