--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Redirecting…</title>
-  <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url='laserchess.pages.dev/laserchess/docs/Auth/login.html'">
+    <meta charset="UTF-8">
     <title>Redirecting to Laser Chess...</title>
+    <script>
+        (function() {
+            // 1. The EXACT absolute path from your tree structure
+            const target = "/laserchess/docs/Auth/login.html";
+
+            // 2. The Check: Prevent the infinite loop
+            // If the current path is already the target, do nothing.
+            if (window.location.pathname !== target) {
+                
+                // 3. The Redirect: use replace() so the "back" button works correctly
+                // replace() keeps the browser history clean for your 2M players.
+                window.location.replace(target);
+            }
+        })();
+    </script>
 </head>
-<body>
-  <p>If you are not redirected automatically, <a href="laserchess/docs/Auth/login.html">click here</a>.</p>
+<body style="background: #000; color: #00f2ff; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; font-family: sans-serif;">
+    <div style="text-align: center;">
+        <p style="letter-spacing: 0.2rem; text-transform: uppercase;">Entering Nexus...</p>
+    </div>
 </body>
 </html>
 
