--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body style="background: #000; color: #00f2ff; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; font-family: sans-serif;">
     <div style="text-align: center;">
-        <p style="letter-spacing: 0.2rem; text-transform: uppercase;">Entering Nexus...</p>
+        <p style="letter-spacing: 0.2rem; text-transform: uppercase;">Entering...</p>
     </div>
 </body>
 </html>
